--- a/src/css/grid.css
+++ b/src/css/grid.css
@@ -59,7 +59,7 @@
 		width: calc(100% - 40px);
 		display: grid;
 		justify-items: start;
-		gap: 5px;
+		gap: 15px 5px;
 	}
 
 	/* Overlay */
@@ -185,6 +185,6 @@
 		display: grid;
 		align-items: initial;
 		justify-items: start;
-		gap: 5px;
+		gap: 10px 5px;
 	}
 }
