--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -68,7 +68,6 @@ body {
 	}
 	.clock-shortcut {
 		grid-template-rows: auto auto;
-		gap: 5px 0;
 	}
 }
 
@@ -89,7 +88,6 @@ body {
 	.clock-shortcut {
 		grid-column: span 2;
 		grid-template-columns: auto auto;
-		gap: 0 5px;
 	}
 }
 
@@ -117,6 +115,5 @@ body {
 		grid-row: 1;
 		grid-column: 1;
 		grid-template-columns: auto auto;
-		gap: 0 5px;
 	}
 }
